consumer_app/src/index.css
@import url("https://fonts.googleapis.com/css2?family=Barlow:wght@400;500;600;700&display=swap");

@tailwind base;
@tailwind components;
@tailwind utilities;

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    scroll-behavior: smooth;
}

@media (prefers-color-scheme: light) {
    :root {
        color: #213547;
        background-color: #ffffff;
    }
    a:hover {
        color: #747bff;
    }
    button {
        background-color: #f9f9f9;
    }
}

@layer base {
    html {
        font-family: "Barlow";
    }
}

@layer components {
    .max-container {
        max-width: 1440px;
        margin: 0 auto;
    }

    .custom-select {
        @apply bg-dark-secondary rounded-low border-slate-blue font-barlow w-full appearance-none border-2 px-5 py-1 focus:outline-none focus:ring-1;
    }
}

@layer utilities {
    .padding {
        @apply px-8 py-12 sm:px-20 sm:py-20;
    }

    .padding-x {
        @apply px-8 sm:px-20;
    }

    .padding-y {
        @apply py-12 sm:py-20;
    }

    .margin-x {
        @apply mx-[5.5rem];
    }
}

.Toastify__toast {
    background-color: #373637;
    border: 1px solid #373637;
    border-radius: 8px;
    font-family: "Barlow";
}

.Toastify__toast-body {
    padding: 8px;
    color: white;
    background-color: #373637;
    border: none;
}

/* .Toastify__toast--success {
    background-color: #07bc0c;
}



.Toastify__toast--success .Toastify__toast-body::before {
    color: red;
} */

